objects/Service_Appointment_Status_Change_PE__e.object
<CustomObject>
    <fields>
        <fullName>DML_Action__c</fullName>
        <label>DML Action</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Service_Appointment_Status__c</fullName>
        <label>Previous Service Appointment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Id__c</fullName>
        <label>Service Appointment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Status__c</fullName>
        <label>Service Appointment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service Appointment Status Change PE</label>
    <pluralLabel>Service Appointment Status Change PEs</pluralLabel>
</CustomObject>